# sylis

./: .editorconfig  .gitignore  .lintstagedrc.cjs  README.en.md  README.md  commitlint.config.cjs  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.cursor/rules/: sylis.mdc
.github/workflows/: deploy-docs.yml  gitflow-check.yml
.husky/: pre-commit
apps/api/: .env.example  .prettierignore  README.md  docker-compose.yml  eslint.config.js  nest-cli.json  package.json  prettier.config.js  prisma.config.ts  tsconfig.json
apps/api/prisma/: seed.ts
apps/api/prisma/schema/: books.prisma  leaning.prisma  learning-path.prisma  quiz.prisma  users.prisma  words.prisma
apps/api/prisma/seed-data/: README.md  book.json
apps/api/scripts/: README.md  cli.ts  generate-swagger.js  index.ts  watcher.ts
apps/api/scripts/config/: index.ts  patterns.ts
apps/api/scripts/core/: dependency-analyzer.ts  file-manager.ts  generator.ts  watcher.ts
apps/api/scripts/types/: index.ts
apps/api/scripts/utils/: dto-cleaner.ts  dto-generator.ts  file-system.ts  file-utils.ts  index.ts  logger.ts  type-helper.ts
apps/api/src/: app.module.ts  main.ts
apps/api/src/constants/: index.ts
apps/api/src/templates/: register.hbs
apps/api/src/third-party-modules/: index.ts
apps/api/src/types/: index.ts
apps/api/src/utils/: index.ts
apps/api/test/: app.e2e-spec.ts
apps/web/: .env.example  README.md  eslint.config.js  package.json  tsconfig.app.json  vite.config.ts
apps/web/src/: App.tsx  vite-env.d.ts
apps/web/src/components/: index.ts
apps/web/src/hooks/: useTheme.ts  useVocabularyPractice.ts
apps/web/src/layout/: index.tsx
apps/web/src/router/: AuthGuard.tsx  Routes.tsx  index.tsx
apps/web/src/styles/: design-tokens.less  index.less  normalize.less
docs/components/: package.json  tsconfig.app.json  tsconfig.node.json
docs/components/.storybook/: main.ts  manager.ts  preview.ts
docs/overview/: index.md  package.json
docs/overview/.vitepress/: config.mts  sidebar.mts
docs/overview/guide/: architecture.md  configuration.md  contribution.md  development-standards.md  gitflow.md  installation.md  navigation.md  quick-start.md  standards.md  troubleshooting.md  what-is-sylis.md
docs/overview/prd/: assessment.md  login-sigin.md  me.md  onboarding.md  overview.md  vocabulary.md
docs/overview/typedoc/: api-generator.mjs  build.mjs
scripts/: start-all.sh  start-dev.sh  start-docs.sh
services/speech-service/: Dockerfile  Makefile  README.md  pyproject.toml  resolve.ds
services/speech-service/app/: alignment.py  evaluate.py  format_adapter.py  kaldi_runner.py  main.py  phoneme_confidence.py  phoneme_converter.py  schemas.py  transcribe.py
services/speech-service/config/: env.example  wenet_config.yaml  words.txt
services/speech-service/scripts/: download_models.py  manage.py  quick_setup.py
services/speech-service/tests/: conftest.py
services/speech-service/tests/integration/: test_api.py
services/speech-service/tests/unit/: test_alignment.py
(+242 files in other folders)
